# webhelper

./: .gitignore  README.md  meson.build  meson_options.txt
debian/: changelog  control  copyright  gir1.2-webhelper2private-1.0.install  rules  webhelper-0-dev.install  webhelper-0.install
test/: tap.py
test/webhelper/: testLocal.js  testTranslate.js
webhelper/: webhelper.js  webhelper2.js
webhelper/webextensions/: wh2extension.c
webhelper/webhelper_private/: config.js.in
